; ModuleID = '/home/carl/AnghaBench/mpv/osdep/extr_path-win.c_path_init.c'
source_filename = "/home/carl/AnghaBench/mpv/osdep/extr_path-win.c_path_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [16 x i8] c"portable_config\00", align 1
@portable_path = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @path_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @path_init() #0 {
  %1 = alloca i8*, align 8
  %2 = alloca i8*, align 8
  %3 = call i8* @talloc_new(i32* null)
  store i8* %3, i8** %1, align 8
  %4 = load i8*, i8** %1, align 8
  %5 = call i8* @mp_get_win_exe_subdir(i8* %4, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0))
  store i8* %5, i8** %2, align 8
  %6 = load i8*, i8** %2, align 8
  %7 = icmp ne i8* %6, null
  br i1 %7, label %8, label %15

8:                                                ; preds = %0
  %9 = load i8*, i8** %2, align 8
  %10 = call i64 @mp_path_exists(i8* %9)
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %15

12:                                               ; preds = %8
  %13 = load i8*, i8** %2, align 8
  %14 = call i32 @talloc_strdup(i32* null, i8* %13)
  store i32 %14, i32* @portable_path, align 4
  br label %15

15:                                               ; preds = %12, %8, %0
  %16 = load i8*, i8** %1, align 8
  %17 = call i32 @talloc_free(i8* %16)
  ret void
}

declare dso_local i8* @talloc_new(i32*) #1

declare dso_local i8* @mp_get_win_exe_subdir(i8*, i8*) #1

declare dso_local i64 @mp_path_exists(i8*) #1

declare dso_local i32 @talloc_strdup(i32*, i8*) #1

declare dso_local i32 @talloc_free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
